<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:id="@id/drmFrame" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:layout_gravity="center" android:id="@id/defaultImg" android:padding="0.0dip" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="fill_parent" android:src="@drawable/default_loading" android:scaleType="fitXY" />
    <FrameLayout android:orientation="vertical" android:id="@id/CertificationFrame" android:background="#ffd0dc00" android:focusableInTouchMode="true" android:visibility="invisible" android:clickable="true" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:layout_gravity="center|left|top" android:orientation="vertical" android:id="@id/certifiSelectLayout" android:background="#ffa9a9a9" android:paddingLeft="14.0sp" android:paddingTop="4.0sp" android:paddingRight="14.0sp" android:paddingBottom="8.0sp" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="60.0dip">
            <ImageView android:layout_gravity="center" android:id="@id/certiTop" android:paddingLeft="44.0sp" android:paddingTop="5.0sp" android:paddingRight="44.0sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/auth_tit" />
            <TextView android:textSize="14.0dip" android:textStyle="bold" android:textColor="#ff000000" android:paddingLeft="13.0sp" android:paddingTop="1.0sp" android:paddingBottom="5.0sp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/terms_info" />
            <FrameLayout android:orientation="vertical" android:id="@id/term" android:background="#00121212" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
                <ImageView android:background="#00121212" android:padding="0.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:src="@drawable/frame" android:scaleType="fitXY" />
                <WebView android:layout_gravity="center|left|top" android:id="@id/wv1" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_margin="10.0sp" />
            </FrameLayout>
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <CheckBox android:textSize="12.0dip" android:textStyle="bold" android:textColor="#ff121212" android:id="@id/check1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/terms_confirm" />
                <FrameLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <Button android:layout_gravity="center" android:id="@id/CertifiYes" android:background="@drawable/certi_button" android:layout_width="200.0sp" android:layout_height="45.0sp" android:layout_weight="1.0" />
                    <Button android:layout_gravity="center" android:id="@id/CertifiYes1" android:background="#00ddd9d5" android:layout_width="200.0sp" android:layout_height="50.0sp" />
                </FrameLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout android:layout_gravity="center" android:orientation="vertical" android:id="@id/gameCloseLayout" android:background="#fffafafa" android:visibility="invisible" android:layout_width="280.0dip" android:layout_height="240.0dip">
            <TextView android:textSize="18.0dip" android:textColor="#ff121212" android:gravity="center" android:background="#ff9dc915" android:layout_width="fill_parent" android:layout_height="30.0dip" android:text="@string/gc_certification" />
            <TextView android:textSize="18.0dip" android:textColor="#ff121212" android:gravity="center" android:id="@id/gameCloseText" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/gc_close" android:layout_weight="1.0" />
            <LinearLayout android:orientation="horizontal" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <Button android:id="@id/closeYes" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/gc_yes" android:layout_weight="1.0" />
                <Button android:id="@id/closeCancel" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/gc_cancel" android:layout_weight="1.0" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout android:layout_gravity="center" android:orientation="vertical" android:id="@id/smsSelectLayout" android:background="#fffafafa" android:visibility="invisible" android:layout_width="280.0dip" android:layout_height="240.0dip">
            <TextView android:textSize="18.0dip" android:textColor="#ff121212" android:gravity="center" android:background="#ff9dc915" android:layout_width="fill_parent" android:layout_height="30.0dip" android:text="@string/gc_certification" />
            <TextView android:textSize="18.0dip" android:textColor="#ff121212" android:gravity="center" android:id="@id/certificationText" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/gc_sms" android:layout_weight="1.0" />
            <LinearLayout android:orientation="horizontal" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <Button android:id="@id/SmsYes" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/gc_yes" android:layout_weight="1.0" />
                <Button android:id="@id/SmsCancel" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/gc_cancel" android:layout_weight="1.0" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout android:layout_gravity="center" android:orientation="vertical" android:id="@id/certifiConfirmLayout" android:background="#fffafafa" android:visibility="invisible" android:layout_width="280.0dip" android:layout_height="240.0dip">
            <TextView android:textSize="18.0dip" android:textColor="#ff121212" android:gravity="center" android:background="#ff9dc915" android:layout_width="fill_parent" android:layout_height="30.0dip" android:text="@string/gc_certification" />
            <TextView android:textSize="18.0dip" android:textColor="#ff121212" android:gravity="center" android:id="@id/certifiConfirmText" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/gc_start" android:layout_weight="1.0" />
            <LinearLayout android:orientation="horizontal" android:paddingLeft="70.0sp" android:paddingRight="70.0sp" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <Button android:id="@id/ConfirmOk" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/gc_ok" android:layout_weight="1.0" />
            </LinearLayout>
        </LinearLayout>
        <ImageView android:padding="0.0dip" android:layout_width="fill_parent" android:layout_height="67.0dip" android:src="@drawable/auth_bg" android:scaleType="fitXY" />
        <ImageView android:layout_gravity="center_horizontal" android:paddingTop="14.0sp" android:paddingBottom="8.0sp" android:layout_width="wrap_content" android:layout_height="60.0dip" android:src="@drawable/auth_ci" android:scaleType="fitXY" />
    </FrameLayout>
    <ProgressBar android:layout_gravity="center" android:id="@android:attr/theme" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" style="?android:attr/progressBarStyleLarge" />
</FrameLayout>